Update formatting in part 7 of Python tutorial

--- a/exercises/01-python/intro_to_python.ipynb
+++ b/exercises/01-python/intro_to_python.ipynb
@@ -1019,47 +1019,47 @@
    "outputs": [],
    "source": [
     "list_1 = list(range(5))\n",
-    "print(\"list_1 =\", list_1)\n",
+    "print(f\"list_1 = {list_1}\")\n",
     "\n",
-    "print(\"len(list_1) =\", len(list_1))\n",
-    "print(\"sum(list_1) =\", sum(list_1))\n",
-    "print(\"min(list_1) =\", min(list_1))\n",
-    "print(\"max(list_1) =\", max(list_1))\n",
+    "print(f\"len(list_1) = {len(list_1)}\")\n",
+    "print(f\"sum(list_1) = {sum(list_1)}\")\n",
+    "print(f\"min(list_1) = {min(list_1)}\")\n",
+    "print(f\"max(list_1) = {max(list_1)}\")\n",
     "print(\"**\")\n",
     "\n",
     "\n",
     "list_2 = [5,3,1,2,0,6]\n",
-    "print(\"list_2 =\", list_2)\n",
-    "print(\"sorted(list_2) =\", sorted(list_2))\n",
+    "print(f\"list_2 = {list_2}\")\n",
+    "print(f\"sorted(list_2) = {sorted(list_2)}\")\n",
     "print(\"**\")\n",
     "\n",
     "\n",
-    "#any checks whether there are any 1s in the list (OR)\n",
-    "#all checks whether all elements are 1s. (AND)\n",
-    "#in Python: 1 = True, 0 = False\n",
+    "# any checks whether there are any 1s in the list (OR)\n",
+    "# all checks whether all elements are 1s. (AND)\n",
+    "# in Python: 1 = True, 0 = False\n",
     "list_3 = [1, 1, 1]\n",
-    "print(\"list_3 =\", list_3)\n",
-    "print(\"any(list_3) =\", any(list_3))\n",
-    "print(\"all(list_3) =\", all(list_3))\n",
+    "print(f\"list_3 = {list_3}\")\n",
+    "print(f\"any(list_3) = {any(list_3)}\")\n",
+    "print(f\"all(list_3) = {all(list_3)}\")\n",
     "\n",
     "list_4 = [0, 1, 1]\n",
-    "print(\"list_4 =\", list_4)\n",
-    "print(\"any(list_4) =\", any(list_4))\n",
-    "print(\"all(list_4) =\", all(list_4))\n",
+    "print(f\"list_4 = {list_4}\")\n",
+    "print(f\"any(list_4) = {any(list_4)}\")\n",
+    "print(f\"all(list_4) = {all(list_4)}\")\n",
     "\n",
     "list_5 = [0, 0, 0]\n",
-    "print(\"list_5 =\", list_5)\n",
-    "print(\"any(list_5) =\", any(list_5))\n",
-    "print(\"all(list_5) =\", all(list_5))\n",
+    "print(f\"list_5 = {list_5}\")\n",
+    "print(f\"any(list_5) = {any(list_5)}\")\n",
+    "print(f\"all(list_5) = {all(list_5)}\")\n",
     "print(\"**\")\n",
     "\n",
     "# zip function:\n",
     "x = [1,2,3]\n",
     "y = [4,5,6]\n",
     "zipped = zip(x,y)\n",
-    "print(\"x\", x)\n",
-    "print(\"y\", y)\n",
-    "print(\"zipped\", list(zipped))"
+    "print(f\"x {x}\")\n",
+    "print(f\"y {y}\")\n",
+    "print(f\"zipped {list(zipped)}\")"
    ]
   },
   {
@@ -1083,15 +1083,15 @@
    "outputs": [],
    "source": [
     "list_of_numbers = [1, 2, 3, 101, 102, 103]\n",
-    "print(\"list_of_numbers =\", list_of_numbers)\n",
+    "print(f\"list_of_numbers = {list_of_numbers}\")\n",
     "\n",
     "#I want to create a new list with all these items doubled.\n",
     "doubled_list = [2 * elem for elem in list_of_numbers]\n",
-    "print(\"doubled_list =\", doubled_list)\n",
+    "print(f\"doubled_list = {doubled_list}\")\n",
     "\n",
     "#A new list with all these items as floats\n",
     "float_list = [float(elem) for elem in list_of_numbers]\n",
-    "print(\"float_list =\", float_list)"
+    "print(f\"float_list = {float_list}\")"
    ]
   },
   {
@@ -1111,8 +1111,8 @@
    "source": [
     "#I want to create a new list with all these items doubled\n",
     "#IF the element is above 100\n",
-    "conditional_doubled_list = [2 * elem for elem in list_of_numbers if elem>100]\n",
-    "print(\"conditional_doubled_list =\", conditional_doubled_list)"
+    "conditional_doubled_list = [2 * elem for elem in list_of_numbers if elem > 100]\n",
+    "print(f\"conditional_doubled_list = {conditional_doubled_list}\")"
    ]
   },
   {
